--- a/htmlKiddy.html
+++ b/htmlKiddy.html
@@ -16,7 +16,9 @@
     </style>
 </head>
 <body>
+
     <h1>Welcome to My Website</h1>
+    <h2>trying git </h2>
     <p>This is a simple example of an HTML page.</p>
     <a href="https://www.example.com">Visit Example</a>
 </body>
