--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First HTML Page</title>
+    <title>KiddyByte</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -17,7 +17,7 @@
 </head>
 <body>
 
-    <h1>Welcome to My Website</h1>
+    <h1>Welcome to KiddyByte!</h1>
     <h2>trying git </h2>
     <p>This is a simple example of an HTML page.</p>
     <a href="https://www.example.com">Visit Example</a>
