--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KiddyByte</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin: 50px;
-        }
-        h1 {
-            color: #007BFF;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./style.css" />
+  <p id="tabs1">Make learning fun for your kids</p>
+  
+  <div class="side-by-side">
+    <p id="tabs2"> ☻ KiddyByte Fun </p>
+    <div class="side-by-side2">
+      <button>Reading</button> 
+      <button>Math</button> 
+      <button>Science</button> 
+      <button>Creativity</button> 
+    </div>
+  </div>
+  
 </head>
-<body>
-
-    <h1>Welcome to KiddyByte!</h1>
-    <h2>trying git </h2>
-    <p>This is a simple example of an HTML page.</p>
-    <a href="https://www.example.com">Visit Example</a>
+<body class = main-content>
+  <h1 id="mainTitle">Welcome to KiddyByte!</h1>
+  <p id="subt">Sign up today and learn with Kiddybyte.</p>
+  <a href="https://www.example.com">Visit Example</a>
 </body>
 </html>
