--- a/index.html
+++ b/index.html
@@ -1,25 +1,174 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./style.css" />
-  <p id="tabs1">Make learning fun for your kids</p>
-  
-  <div class="side-by-side">
-    <p id="tabs2"> ☻ KiddyByte Fun </p>
-    <div class="side-by-side2">
-      <button>Reading</button> 
-      <button>Math</button> 
-      <button>Science</button> 
-      <button>Creativity</button> 
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+
+    <div class="side-by-side">
+        <p id="tabs2"> ☻ KiddyByte Fun </p>
+        <div class="side-by-side2">
+            <button>Reading</button>
+            <button>Math</button>
+            <button>Science</button>
+            <button>Creativity</button>
+        </div>
     </div>
-  </div>
-  
+
 </head>
-<body class = main-content>
-  <h1 id="mainTitle">Welcome to KiddyByte!</h1>
-  <p id="subt">Sign up today and learn with Kiddybyte.</p>
-  <a href="https://www.example.com">Visit Example</a>
+
+<body class=main-content>
+    <img src="./logo.png" alt="KiddyByte logo" width="200" />
+
+    <h1 id="mainTitle">Learning made exciting</h1>
+    <h1> for young minds!</h1>
+    <p id="subtext">Sign up today and learn with Kiddybyte.</p>
+    <p id=makeInvisible> . </p>
+
+    <div class="buttons">
+        <a href="#signup">Sign Up</a>
+        <a href="#login">Log In</a>
+    </div>
+
+    <h1> </h1>
+    <p id=makeInvisible> . </p>
+
+
+    <div class="features">
+        <div class="feature">
+            <div class="feature-icon">🔁</div>
+            <h3>Colorful World of Learning</h3>
+            <p>Embark on educational quests filled with joy and knowledge.</p>
+        </div>
+        <div class="feature">
+            <div class="feature-icon">🌙</div>
+            <h3>Sweet Dreams Learning</h3>
+            <p>Drift into a world of learning and wake up smarter.</p>
+        </div>
+        <div class="feature">
+            <div class="feature-icon">🔥</div>
+            <h3>No More Worries</h3>
+            <p>Explore a world of fun learning and endless possibilities.</p>
+        </div>
+    </div>
+
+    <div class="community-section">
+        <h2>Join KiddyByte's community today and share your children's experience with personalized learning</h2>
+
+        <div class="testimonials">
+            <div class="testimonial">
+                <div class="quote">“</div>
+                <p>Kids love these personalized lessons!</p>
+                <div class="author">
+                    <img src="https://via.placeholder.com/32" alt="Oliver R." />
+                    <div>
+                        <strong>Oliver R.</strong><br />Principal of School
+                    </div>
+                </div>
+            </div>
+
+            <div class="testimonial">
+                <div class="quote">“</div>
+                <p>This website sparks joy and learning for my son. 10/10!</p>
+                <div class="author">
+                    <img src="https://via.placeholder.com/32" alt="Emma L." />
+                    <div>
+                        <strong>Emma L.</strong><br />Storyteller
+                    </div>
+                </div>
+            </div>
+
+            <div class="testimonial">
+                <div class="quote">“</div>
+                <p>Learning that is adaptive to my kid'
+            </div>
+        </div>
+        <h1> </h1>
+    </div>
+
+    <section class="mainbody3">
+        <h1>Choose your adventure</h1>
+        <p class="subtext">We recommend consulting with your school before purchasing. Your school might already have a
+            license!</p>
+
+        <div class="plans">
+            <div class="plan-card light">
+                <h2>Basic Plan</h2>
+                <span class="price">$0/ month</span>
+                <ul>
+                    <li>✔️ Basic learning tools</li>
+                    <li>❌ Interactive stories</li>
+                    <li>❌ Safe learning environment</li>
+                </ul>
+                <button>JOIN BASIC</button>
+                <span class="icon">🎁</span>
+            </div>
+
+            <div class="plan-card">
+                <h2>Premium Plan</h2>
+                <span class="price">$19/ month</span>
+                <ul>
+                    <li>✔️ Basic learning tools</li>
+                    <li>✔️ Progress tracking</li>
+                    <li>❌ Engage with other young learners</li>
+                </ul>
+                <button>JOIN PREMIUM</button>
+                <span class="icon">⭐</span>
+            </div>
+
+            <div class="plan-card light">
+                <h2>Premium Plus Plan</h2>
+                <span class="price">$29/ month</span>
+                <ul>
+                    <li>✔️ Basic learning tools</li>
+                    <li>✔️ Process tracking</li>
+                    <li>✔️ Adaptive plan depending on how your child responds to lessons</li>
+                </ul>
+                <button>JOIN PREMIUM PLUS</button>
+                <span class="icon">💎</span>
+            </div>
+        </div>
+    </section>
+
+
+    <footer class="footer">
+        <div class="footer-brand">
+            <h3>😊 FunLand</h3>
+        </div>
+        <div class="footer-columns">
+            <div>
+                <strong>Learn about us</strong>
+                <p>Discover more</p>
+                <p>Join our team</p>
+                <p>Media resources</p>
+                <p>Learning plans</p>
+            </div>
+            <div>
+                <strong>Assistance</strong>
+                <p>Kids' support team</p>
+                <p>Questions answered</p>
+                <p>Get help now</p>
+            </div>
+            <div>
+                <strong>Join the fun</strong>
+                <p>Fun learning on</p>
+                <p>Share on Instagram</p>
+                <p>Tweet with us</p>
+                <p>Interactive learning</p>
+            </div>
+            <div>
+                <strong>Download now</strong>
+                <button class="download-btn">📱 Available on <br> App Store</button>
+                <button class="download-btn">📲 Install on <br> Google Play</button>
+            </div>
+    </footer>
+
+</html>
+
+
+
+
 </body>
+
 </html>
