--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&display=swap" rel="stylesheet">
     <!-- Link to external CSS file -->
-    <link rel="stylesheet" href="entryPageStyle.css">
+    <link rel="stylesheet" href="indexStyle.css">
 </head>
 
 <body>
